feat: add CORS allow origin to config and environment variable and clean up code

--- a/config.example.json
+++ b/config.example.json
@@ -4,7 +4,14 @@
     "exp": 24
   },
   "web": {
-    "port": 3000
+    "port": 3000,
+    "cors": {
+      "origins": [
+        "*",
+        "http://example.com",
+        "http://anotherdomain.com"
+      ]
+    }
   },
   "db": {
     "username": "YOUR_DB_USERNAME",
